app-manifests/nginx-unprivileged-minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-example-01-ingress
  namespace: app01-dev
spec:
  #ingressClassName: avi-lb  # Only required if the default IngressClass is not already set or not set to avi
  rules:
  - host: nginx-example-01.avi.aclab.uk     # This must match the DNS policy zone bound to the AVI controller - you CNAME alias to this from another zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: nginx-example-01-svc
           port:
            number: 80
